--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "labsys/auth-gaia",
-    "description": "labsys gaia rbac management package",
+    "description": "labsys gaia RBAC management package",
     "license": "MIT",
     "authors": [
         {
@@ -13,6 +13,16 @@
     "autoload": {
         "psr-4": {
             "Labsys\\GaiaAuth\\": "src/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers":[
+                "Labsys\\GaiaAuth\\Providers\\GaiaAuthServiceProvider"
+            ],
+            "aliases":{
+                "GaiaAuth": "Labsys\\GaiaAuth\\Facades\\GaiaAuthFacade"
+            }
         }
     }
 }
