--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,6 @@ matrix:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer install --no-interaction --prefer-source
+  
+script:
+  - vendor/bin/phpunit --verbose
